// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextEditor /> snapshot test @content is not null, @height is not null 1`] = `
<div>
  <Editor
    init={
      Object {
        "height": 400,
        "menubar": false,
        "plugins": Array [
          "codesample textpattern advlist autolink lists link image preview textcolor",
          "searchreplace visualblocks code",
          "media contextmenu paste code help wordcount",
        ],
        "toolbar": "insert | undo redo | codesample formatselect | bold italic backcolor  | bullist numlist | help",
      }
    }
    initialValue="content"
    onChange={[MockFunction]}
  />
</div>
`;

exports[`<TextEditor /> snapshot test @content is null, @height is null 1`] = `
<div>
  <Editor
    init={
      Object {
        "height": 300,
        "menubar": false,
        "plugins": Array [
          "codesample textpattern advlist autolink lists link image preview textcolor",
          "searchreplace visualblocks code",
          "media contextmenu paste code help wordcount",
        ],
        "toolbar": "insert | undo redo | codesample formatselect | bold italic backcolor  | bullist numlist | help",
      }
    }
    initialValue=""
    onChange={[MockFunction]}
  />
</div>
`;
